--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="capture_unknown_app">Capture Unknown Traffic</string>
     <string name="capture_unknown_app_summary">When an app filter is set, also capture general purpose traffic which cannot be associated to a specific app. This is usually needed to properly capture DNS traffic.</string>
     <string name="capture_prefs">Capture</string>
+    <string name="status_view">Status</string>
+    <string name="connections_view">Connections</string>
+    <string name="no_connections">No connections</string>
 </resources>
