Improve connections view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="no_filter">No Filter</string>
     <string name="collector_info">UDP Collector: %1$s:%2$s</string>
+    <string name="ip_and_port">%1$s:%2$d</string>
 
     <!-- Defaults -->
     <string name="default_collector_ip">127.0.0.1</string>
@@ -26,3 +27,4 @@
     <string name="connections_view">Connections</string>
     <string name="no_connections">No connections</string>
 </resources>
+
