--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="no_filter">No Filter</string>
     <string name="collector_info">UDP Collector: %1$s:%2$d</string>
     <string name="http_server_status">HTTP Server: http://%1$s:%2$d</string>
-    <string name="ip_and_port">%1$s:%2$d</string>
+    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
     <string name="up_and_down">%1$s down — %2$s up</string>
-    <string name="app_and_proto">%1$s (%2$s)</string>
+    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
     <string name="capture_not_started">Capture not running!</string>
