--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,8 @@
     <string name="rate_app">Rate App</string>
     <string name="open_telegram">Telegram Channel</string>
     <string name="open_github">Github Project</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
+    <string name="existing_vpn_confirm">The currently active VPN app will be disconnected. Do you want to proceed?</string>
 </resources>
 
