--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="tls_decryption">TLS Decryption</string>
     <string name="user_guide">User Guide</string>
     <string name="rate_app">Rate App</string>
-    <string name="open_telegram">Telegram Channel</string>
+    <string name="open_telegram_group">Telegram Group</string>
     <string name="open_github">Github Project</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
