--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,6 @@
     <string name="packets_sent">Packets Sent</string>
     <string name="packets_rcvd">Packets Received</string>
     <string name="dns_queries">DNS Queries</string>
+    <string name="dns_server">DNS Server</string>
 </resources>
 
