Add apps view with per-app connections and volumes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,8 +80,9 @@
     <string name="packets_rcvd">Packets Received</string>
     <string name="dns_queries">DNS Queries</string>
     <string name="search_apps">Search Apps</string>
-    <string name="no_apps">No apps available</string>
+    <string name="no_apps">No apps</string>
     <string name="show_system_apps">Show system apps</string>
     <string name="dns_server">DNS Server</string>
+    <string name="apps">Apps</string>
 </resources>
 
