--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,8 @@
     <string name="apps">Apps</string>
     <string name="remove_app_filter">Remove the app filter</string>
     <string name="set_app_filter">Set the app filter</string>
+    <string name="navigation_drawer_open">Drawer Open</string>
+    <string name="navigation_drawer_close">Drawer Close</string>
+    <string name="monitoring">Monitoring</string>
 </resources>
 
