--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,6 @@
     <string name="set_app_filter">Set the app filter</string>
     <string name="navigation_drawer_open">Drawer Open</string>
     <string name="navigation_drawer_close">Drawer Close</string>
-    <string name="monitoring">Monitoring</string>
+    <string name="inspector">Inspector</string>
 </resources>
 
