Implement capture service notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,7 @@
     <string name="ok">Ok</string>
     <string name="pcap_file_action">Traffic saved to file %1$s (%2$s).</string>
     <string name="delete_error">Could not delete file</string>
+    <string name="capture_running">Capture running</string>
+    <string name="notification_msg">%1$s captured, %2$s connections</string>
 </resources>
 
