--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,8 +47,8 @@
     <string name="http_server_info">Start an HTTP server for the PCAP download</string>
     <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
     <string name="http_server_port">HTTP Server Port</string>
-    <string name="receiver_ip_address">Receiver IP Address</string>
-    <string name="receiver_port">Receiver Port</string>
+    <string name="receiver_ip_address">Collector IP Address</string>
+    <string name="receiver_port">Collector Port</string>
     <string name="dump_mode">Dump Mode</string>
     <string name="tls_proxy_ip_address">mitmproxy IP Address</string>
     <string name="tls_proxy_port">mitmproxy Port</string>
@@ -99,5 +99,6 @@
     <string name="delete_error">Could not delete file</string>
     <string name="capture_running">Capture running</string>
     <string name="notification_msg">%1$s captured, %2$s connections</string>
+    <string name="no_app_filter">No app filter set</string>
 </resources>
 
