Add about view and share app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">PCAPdroid</string>
+    <string name="about_copyright" translatable="false">Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it</string>
     <string name="start_button">Start</string>
     <string name="stop_button">Stop</string>
     <string name="title_activity_settings">Settings</string>
@@ -59,9 +60,9 @@
     <string name="pcap_dump">PCAP Dump</string>
     <string name="tls_decryption">TLS Decryption</string>
     <string name="user_guide">User Guide</string>
-    <string name="rate_app">Rate App</string>
+    <string name="rate_app">Rate</string>
     <string name="open_telegram_group">Telegram Group</string>
-    <string name="open_github">Github Project</string>
+    <string name="open_github">Source Code</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
     <string name="existing_vpn_confirm">The currently active VPN app will be disconnected. Do you want to proceed?</string>
@@ -112,5 +113,9 @@
     <string name="save_to_file">Save to file</string>
     <string name="file_saved">File successfully saved</string>
     <string name="older_connections_notice">%1$d older connections not shown</string>
+    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges.</string>
+    <string name="app_no_warranty">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
+    <string name="gpl_license_link">GPLv3 License</string>
+    <string name="get_app">Get it:</string>
 </resources>
 
