Add ability to filter by unknown app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,5 +107,6 @@
     <string name="gpl_license_link">GPLv3 License</string>
     <string name="get_app">Get it:</string>
     <string name="tls_how_to">How to setup TLS Decryption</string>
+    <string name="unknown_app">Unknown</string>
 </resources>
 
