--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,9 @@
     <string name="get_app">Get it:</string>
     <string name="tls_how_to">How to setup TLS Decryption</string>
     <string name="unknown_app">Unknown</string>
+    <string name="vpn_prefs">VPN</string>
+    <string name="enable_ipv6">Enable IPv6</string>
+    <string name="enable_ipv6_summary">Allow IPv6 internet connections. This should only be enabled on networks with an IPv6 gateway.</string>
+    <string name="error">Error</string>
 </resources>
 
