--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,6 @@
     <string name="enable_ipv6">Enable IPv6</string>
     <string name="enable_ipv6_summary">Allow IPv6 internet connections. This should only be enabled on networks with an IPv6 gateway.</string>
     <string name="error">Error</string>
+    <string name="conn_status_unreachable">Unreachable</string>
 </resources>
 
