Implement language switch
It is now possible to switch between the system default language and
the english language.

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -103,7 +103,7 @@
     <string name="error">Errore</string>
     <string name="conn_status_unreachable">Irraggiungibile</string>
     <string name="other_prefs">Altro</string>
-    <string name="app_language">Lingua dell\'App</string>
+    <string name="app_language">Lingua</string>
     <string name="lang_english">Inglese</string>
     <string name="lang_system_default">Predefinita del sistema</string>
 </resources>
